@@ -92,6 +92,96 @@ class TestTableComputation(unittest.TestCase):
                 (PercentChange('one', 'three'), 'test')
             ])
 
+    def test_bins(self):
+        rows = []
+
+        for i in xrange(100):
+            rows.append([i]),
+
+        columns = (
+            ('number', self.number_type),
+        )
+
+        new_table = table = Table(rows, columns).compute([
+            (Bins('number'), 'bins')
+        ])
+
+        self.assertEqual(new_table.columns['bins'][5], '[0,10)')
+        self.assertEqual(new_table.columns['bins'][37], '[30,40)')
+        self.assertEqual(new_table.columns['bins'][99], '[90,100)')
+
+    def test_bins_negative(self):
+        rows = []
+
+        for i in xrange(0, -101, -1):
+            rows.append([i])
+
+        columns = (
+            ('number', self.number_type),
+        )
+
+        new_table = Table(rows, columns).compute([
+            (Bins('number'), 'bins')
+        ])
+
+        self.assertEqual(new_table.columns['bins'][5], '[-10,0)')
+        self.assertEqual(new_table.columns['bins'][37], '[-40,-30)')
+        self.assertEqual(new_table.columns['bins'][99], '[-100,-90)')
+
+    def test_bins_mixed_signs(self):
+        rows = []
+
+        for i in xrange(0, -101, -1):
+            rows.append([i + 50])
+
+        columns = (
+            ('number', self.number_type),
+        )
+
+        new_table = Table(rows, columns).compute([
+            (Bins('number'), 'bins')
+        ])
+
+        self.assertEqual(new_table.columns['bins'][5], '[40,50)')
+        self.assertEqual(new_table.columns['bins'][37], '[10,20)')
+        self.assertEqual(new_table.columns['bins'][99], '[-50,-40)')
+
+    def test_bins_small_numbers(self):
+        rows = []
+
+        for i in xrange(101):
+            rows.append([Decimal(i) / Decimal('10')])
+
+        columns = (
+            ('number', self.number_type),
+        )
+
+        new_table = Table(rows, columns).compute([
+            (Bins('number'), 'bins')
+        ])
+
+        self.assertEqual(new_table.columns['bins'][5], '[0,1)')
+        self.assertEqual(new_table.columns['bins'][37], '[3,4)')
+        self.assertEqual(new_table.columns['bins'][99], '[9,10)')
+
+    def test_bins_decimals(self):
+        rows = []
+
+        for i in xrange(101):
+            rows.append([Decimal(i) / Decimal('100')])
+
+        columns = (
+            ('number', self.number_type),
+        )
+
+        new_table = table = Table(rows, columns).compute([
+            (Bins('number'), 'bins')
+        ])
+
+        self.assertEqual(new_table.columns['bins'][5], '[0.0,0.1)')
+        self.assertEqual(new_table.columns['bins'][37], '[0.3,0.4)')
+        self.assertEqual(new_table.columns['bins'][99], '[0.9,1.0)')
+
     def test_rank_number(self):
         new_table = self.table.compute([
             (Rank('two'), 'rank')
