@@ -94,7 +94,13 @@ class TestMisc(unittest.TestCase):
     def test_round_to_magnitude(self):
         self.assertEqual(round_to_magnitude(Decimal('2.7')), Decimal('3'))
         self.assertEqual(round_to_magnitude(Decimal('-2.7')), Decimal('-3'))
+        self.assertEqual(round_to_magnitude(Decimal('2.2')), Decimal('3'))
+        self.assertEqual(round_to_magnitude(Decimal('-2.2')), Decimal('-3'))
         self.assertEqual(round_to_magnitude(Decimal('2.77')), Decimal('3'))
-        self.assertEqual(round_to_magnitude(Decimal('-2.77')), Decimal('3'))
+        self.assertEqual(round_to_magnitude(Decimal('-2.77')), Decimal('-3'))
+        self.assertEqual(round_to_magnitude(Decimal('2.22')), Decimal('3'))
+        self.assertEqual(round_to_magnitude(Decimal('-2.22')), Decimal('-3'))
         self.assertEqual(round_to_magnitude(Decimal('27')), Decimal('30'))
-        self.assertEqual(round_to_magnitude(Decimal('27')), Decimal('30'))
+        self.assertEqual(round_to_magnitude(Decimal('-27')), Decimal('-30'))
+        self.assertEqual(round_to_magnitude(Decimal('22')), Decimal('30'))
+        self.assertEqual(round_to_magnitude(Decimal('-22')), Decimal('-30'))
